@@ -258,6 +258,22 @@
       </tr>
       <!-- End gcjwebplugin -->
 
+      <!-- H2 Database Engine -->
+      <tr valign="top">
+        <td><b><a href="http://www.h2database.com/">H2 Database Engine</a></b></td>
+
+	<td>H2 is a Java database engine. Apart from the usual features such as
+SQL, transactions, JDBC API, referential integrity, the database also
+supports clustering, views, subqueries, encryption, trigger and stored
+procedures. As HSQLDB, database can be operated in the embedded and
+server mode, with data kept in-memory or on disk. It is available as a
+native executable (using GCJ) and as a Java library.
+	</td>
+
+	<td><a href="dbsupport@h2database.com">H2 maintainers</a></td>
+      </tr>
+      <!-- End H2 Database Engine -->
+
       </table>
 
 </body>
