@@ -1,3 +1,7 @@
+2006-02-09  Tom Tromey  <tromey@redhat.com>
+
+	* done.html: Added H2 Database Engine.
+
 2005-06-05  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* docs.html: Adjust link to Linux Journal article.
